default/objects/Objective_Collaborator__c/Objective_Collaborator__c.object-meta.xml
<CustomObject>
    <description>Junction object linking an Objective with a Team Member who is authorised to collaborate on it, as defined by their access type.</description>
    <label>Objective Collaborator</label>
    <nameField>
        <label>Objective Collaborator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objective Collaborators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>