default/objects/Objective_Collaborator__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <description>The kind of access granted to the collaborator.</description>
    <label>Access Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>