default/objects/Objective_Collaborator__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <description>The Objective on which the Team Member can collaborate.</description>
    <label>Objective</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipLabel>Objective Collaborators</relationshipLabel>
    <relationshipName>Objective_Collaborators</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>