default/objects/Objective_Collaborator__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Team Member who is the collaborator.</description>
    <label>Team Member</label>
    <referenceTo>fHCM2__Team_Member__c</referenceTo>
    <relationshipLabel>Objective Collaborators</relationshipLabel>
    <relationshipName>Objective_Collaborators</relationshipName>
    <type>Lookup</type>
</CustomField>